--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<div id="controller" class="controller">
 		<h2 id="game-over" class="game-over">RUN!</h2>
 		<p class="score">
-			<a href="javascript:;" id="clear-score" class="clear-score">清空最高分</a>
+			<a href="javascript:;" id="clear-score" class="clear-score">Clear</a>
 			<span id="score"></span>
 		</p>
-		<a href="javascript:;" id="start" class="start">开始游戏</a>
+		<a href="javascript:;" id="start" class="start">START!</a>
 	</div>
 
 	<script src="js/run.js"></script>
