helps info update

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 			<a href="javascript:;" id="clear-score" class="clear-score">Clear</a>
 			<span id="score"></span>
 		</p>
+		<div class="help"><span class="mouse"></span> MOVE</div>
+		<div class="help">
+			<span class="btn">S</span> SHIELD
+		</div>
 		<a href="javascript:;" id="start" class="start">START!</a>
 	</div>
 
