--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</p>
 		<div class="help"><span class="mouse"></span> MOVE</div>
 		<div class="help">
-			<span class="btn">S</span> SHIELD
+			<span class="mouseleft"></span> SHIELD
 		</div>
 		<a href="javascript:;" id="start" class="start">START!</a>
 	</div>
